# delphitools-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  TOOLS.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
examples/: gen-man.rs
man/: delphi-barcode.1  delphi-base.1  delphi-calc.1  delphi-clip.1  delphi-colorblind.1  delphi-colour.1  delphi-completions.1  delphi-contrast.1  delphi-convert.1  delphi-crop.1  delphi-decode.1  delphi-encode.1  delphi-favicon.1  delphi-font-info.1  delphi-glyph.1  delphi-harmony.1  delphi-hash.1  delphi-impose.1  delphi-line-height.1  delphi-matte.1  delphi-meta.1  delphi-noise.1  delphi-palette.1  delphi-paper.1  delphi-preflight.1  delphi-px2rem.1  delphi-qr.1  delphi-regex.1  delphi-rem2px.1  delphi-rmbg.1  delphi-scroll.1  delphi-shavian.1  delphi-split.1  delphi-svgo.1  delphi-tailwind-shades.1  delphi-time.1  delphi-trace.1  delphi-typo.1  delphi-unit.1  delphi-watermark.1  (+3 more)
packaging/: README.md
packaging/aur-bin/: PKGBUILD
packaging/copr/: delphitools-cli.spec
src/: agent.rs  agent.txt  banner.rs  cli.rs  error.rs  input.rs  lib.rs  main.rs  man.rs  output.rs
src/calc/: base.rs  calc.rs  encode.rs  mod.rs  time.rs  unit.rs
src/colour/: colorblind.rs  contrast.rs  convert.rs  harmony.rs  mod.rs  names.rs  palette.rs  shades.rs
src/image_tools/: clip.rs  convert.rs  crop.rs  favicon.rs  matte.rs  mod.rs  noise.rs  rmbg.rs  scroll.rs  split.rs  svgo.rs  trace.rs  watermark.rs
src/pdf/: impose.rs  mod.rs  preflight.rs  zine.rs
src/text/: font_info.rs  glyph.rs  line_height.rs  mod.rs  paper.rs  px2rem.rs  regex_tool.rs  shavian.rs  typo.rs  wc.rs
tests/: cli.rs
