[package]
name = "delphitools-cli"
version = "0.1.0"
edition = "2021"
description = "delphitools CLI — design & publishing utilities"

[[bin]]
name = "delphi"
path = "src/main.rs"

[dependencies]
# core
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
is-terminal = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# hashing / encoding
base64 = "0.22"
md-5 = "0.10"
sha2 = "0.10"
urlencoding = "2"

# regex / text
regex = "1"
unicode_names2 = "1"

# math / time
evalexpr = "11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"

# random (deterministic — palette --seed)
rand = "0.8"
rand_chacha = "0.3"

# images
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "tiff", "bmp", "ico"] }
imageproc = { version = "0.25", default-features = false }
resvg = { version = "0.43", default-features = false }
usvg = { version = "0.43", default-features = false }
tiny-skia = "0.11"

# image: ICO writer (image's ico encoder only handles single sizes; we want multi-size ICO)
ico = "0.4"

# image: vector tracing
visioncortex = "0.8"
vtracer = { version = "0.6", default-features = false }

# fonts
ttf-parser = "0.25"

# qr / barcode
qrcode = { version = "0.14", default-features = false }
barcoders = { version = "2", default-features = false, features = ["image"] }

# PDF
lopdf = { version = "0.40", default-features = false, features = ["chrono"] }
printpdf = { version = "0.7", default-features = false }

# SVG optimisation
quick-xml = "0.36"

[profile.release]
strip = true
lto = true
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
