[package]
name = "delphitools-cli"
version = "0.1.0"
edition = "2021"
description = "delphitools CLI — indie toolkit for designers (colour, image, PDF, type, calc)"
license = "0BSD"
readme = "README.md"
repository = "https://github.com/1612elphi/delphitools-cli"
homepage = "https://delphitools.info"
keywords = ["cli", "design", "colour", "image", "palette"]
categories = ["command-line-utilities", "graphics", "multimedia::images"]
rust-version = "1.85"

[lib]
name = "delphitools_cli"
path = "src/lib.rs"

[[bin]]
name = "delphi"
path = "src/main.rs"

# Aliases `delphitools` and `dt` live in src/bin/ and are auto-discovered.
# All three binaries are thin shims around `delphitools_cli::entry()`.

[dependencies]
# core
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
is-terminal = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# hashing / encoding
base64 = "0.22"
md-5 = "0.10"
sha2 = "0.10"
urlencoding = "2"

# regex / text
regex = "1"
unicode_names2 = "1"

# math / time
evalexpr = "11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"

# random (deterministic — palette --seed)
rand = "0.8"
rand_chacha = "0.3"

# images
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "tiff", "bmp", "ico"] }
imageproc = { version = "0.25", default-features = false }
resvg = { version = "0.43", default-features = false }
usvg = { version = "0.43", default-features = false }
tiny-skia = "0.11"

# image: ICO writer (image's ico encoder only handles single sizes; we want multi-size ICO)
ico = "0.4"

# image: vector tracing
visioncortex = "0.8"
vtracer = { version = "0.6", default-features = false }

# fonts
ttf-parser = "0.25"

# qr / barcode
qrcode = { version = "0.14", default-features = false }
barcoders = { version = "2", default-features = false, features = ["image"] }

# PDF
lopdf = { version = "0.40", default-features = false, features = ["chrono"] }
printpdf = { version = "0.7", default-features = false }

# rmbg (background removal). Model download uses the system `curl`; ort runs
# CPU inference on the bundled ONNX Runtime binary.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "ndarray", "copy-dylibs"] }
ort-sys = "=2.0.0-rc.10"
ndarray = "0.16"
dirs = "5"

# SVG optimisation
quick-xml = "0.36"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[profile.release]
strip = true
lto = true
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
